# codex-hybrid-model-switcher

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_CHECK.md  HANDOFF_TO_CODEX.md  README.md  ROADMAP.md  SECURITY.md  START_HERE.md  bootstrap.py  pyproject.toml
.github/: labels.yml
docs/: agent-assisted-setup.md  agent-handoff-drill.md  api-key-environment.md  architecture.md  bootstrap.md  bridge-health.md  canary-report.md  demo-gallery.md  faq.md  final-check.md  first-run-wizard.md  github-labels.md  install-validation.md  local-llama-smoke.md  macos-cloud-switch-smoke.md  macos.md  open-source-readiness.md  private-config-dryrun.md  public-release-plan.md  quickstart-demo.md  real-clean-machine-canary.md  recovery.md  release-checklist.md  release-post.md  safety.md  setup-intake.md  setup-report.md  stock-codex-handoff-validation.md  supervised-handoff-drill.md  tutorial.zh-CN.md  user-success-criteria.md  validation-matrix.md  windows-cloud-canary.md  windows-hyperv-clean-vm-canary.md  windows-one-click-installer.md  windows-second-canary.md  windows-user-flow.md  windows.md
scripts/: Codex Hybrid Bootstrap.cmd  Codex Hybrid Bootstrap.command  Codex Model Switcher.cmd  bootstrap-windows.ps1  build-windows-one-click-package.py  install-macos-launcher.sh  install-windows-launcher.ps1  local-smoke-macos.sh  local-smoke-windows.ps1  macos-provider-menu.sh  macos-provider-switch.sh  validate-agent-handoff-drill.py  validate-github-entrypoint.py  validate-install.py  validate-real-clean-machine-canary.py  validate-release-acceptance.py  validate-stock-codex-flow.py  validate-stock-codex-handoff.py  windows-cloud-canary.ps1  windows-provider-menu.ps1  windows-provider-switch.ps1  windows-restore-official.ps1
tests/: test_agent_docs.py  test_bootstrap.py  test_bridge.py  test_bridge_health.py  test_config.py  test_env_help.py  test_macos_scripts.py  test_private_config.py  test_report.py  test_security.py  (+5 more)
(+35 files in other folders)
