[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-hybrid-model-switcher"
version = "0.5.0"
description = "Cross-platform Codex model switcher for OpenAI-compatible providers and local llama.cpp models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Codex Hybrid Model Switcher Maintainers" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
codex-hybrid-switcher = "codex_hybrid_switcher.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
