[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-hybrid-model-switcher"
version = "2.13.2"
description = "Cross-platform Codex model switcher for OpenAI-compatible providers and local llama.cpp models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Codex Hybrid Model Switcher Maintainers" }]
keywords = ["codex", "model-switching", "llama.cpp", "openai-compatible", "desktop"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
codex-hybrid-switcher = "codex_hybrid_switcher.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
